@@ -12,6 +12,8 @@
   * Don't write empty tile if tile geometry matches the image width (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=16064).
   * Support -regard-warnings in the mogrify utility.
+  * Output the correct units for the identify utility (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=16075).
 
 2010-04-15  6.6.1-4 Cristy  <quetzlzacatenango@image...>
   * Do not set the resample virtual pixel method when undefined.
